tests/ui/wait-for-property-2.goml
// This test ensures that the `wait-for-property` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
show-text: true
// Shouldn't wait here since the "data-a" property doesn't exist yet.
// Also should emit a warning.
wait-for-property: ("button", {"data-a": null}, [ALL, STARTS_WITH])
//~^ WARNING: Special checks (STARTS_WITH) will be ignored for `null`
// Testing the `ALL` ident.
click: "#js-change-colors"
wait-for-property: ("button", {"data-a": "huh"}, [ALL, STARTS_WITH])
set-timeout: 100
wait-for-property: ("#i-dont-exist", {"data-huh": "heh"}, ALL)
//~^ ERROR: The CSS selector "#i-dont-exist" was not found
